Chore: clean up

--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -8,8 +8,8 @@ jobs:
 
       - name: Setup SSH
         env: 
-          LYRA_UTILS_SSH: ${{secrets.LYRA_UTILS}}
-        run: mkdir $HOME/.ssh && echo "$LYRA_UTILS_SSH" > $HOME/.ssh/id_rsa && chmod 600 $HOME/.ssh/id_rsa
+          LYRA_V2_SSH: ${{secrets.V2_CORE}}
+        run: mkdir $HOME/.ssh && echo "$LYRA_V2_SSH" > $HOME/.ssh/id_rsa && chmod 600 $HOME/.ssh/id_rsa
 
       - name: Install Submodules
         run: git submodule update --init --recursive
