--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,7 @@
 [submodule "lib/v2-core"]
 	path = lib/v2-core
 	url = git@github.com:lyra-finance/v2-core.git
+[submodule "lib/lyra-utils"]
+	path = lib/lyra-utils
+	url = https://github.com/lyra-finance/lyra-utils
+	branch = v0.2.1
