--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "lib/forge-std"]
-	path = lib/forge-std
-	url = https://github.com/lib/forge-std
-	branch = v1.3.0
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
@@ -11,4 +7,7 @@
 	url = https://github.com/lyra-finance/lyra-utils
 [submodule "lib/v2-core"]
 	path = lib/v2-core
-	url = https://github.com/lyra-finance/v2-core
+	url = git@github.com:lyra-finance/v2-core.git
+[submodule "lib/forge-std"]
+	path = lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
