--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,13 @@
-[submodule "lib/forge-std"]
-	path = lib/forge-std
-	url = https://github.com/foundry-rs/forge-std
-	branch = v1.5.3
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 	branch = v4.8.3
+[submodule "lib/lyra-utils"]
+	path = lib/lyra-utils
+	url = https://github.com/lyra-finance/lyra-utils
 [submodule "lib/v2-core"]
 	path = lib/v2-core
 	url = git@github.com:lyra-finance/v2-core.git
+[submodule "lib/forge-std"]
+	path = lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
