feat: update script to deploy from lib directly, copy output file and run the matching deployment script

--- a/scripts/input/901/config.json
+++ b/scripts/input/901/config.json
@@ -1,4 +1,4 @@
 {
   "subAccounts": "0x346C05ee9D3B175A633397AE20b86F89637CeB21",
-  "cashAsset": "0x48Dc82b42da8C3BE1D652BD92Ee8d0fc3c9B3f66"
+  "cash": "0x48Dc82b42da8C3BE1D652BD92Ee8d0fc3c9B3f66"
 }
