--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ docs/
 .env
 
 lcov.info
+
+scripts/input/31337/*
+!scripts/input/31337/.gitkeep 
+
+deployments/31337/*
+!deployments/31337/.gitkeep
