chore: update input

--- a/scripts/input/31337/config.json
+++ b/scripts/input/31337/config.json
@@ -1,10 +1,10 @@
 {
-  "auction": "0x6772299e3b0C7FF1AC8728F942A252e72CA1b521",
-  "cash": "0x41d847D2dF78b27c0Bc730F773993EfE247c3f78",
-  "rateModel": "0x1d61223Caea948f97d657aB3189e23F48888b6b0",
-  "securityModule": "0x59E8b474a8061BCaEF705c7B93a903dE161FD149",
-  "srm": "0xfe3e0ACFA9f4165DD733FCF6912c9d90c3aC0008",
-  "srmViwer": "0xDb1791026c3824441FAe8A105b08E40dD02e1469",
-  "stableFeed": "0xb77efe3e7c049933853e2C845a1412bCd36a2899",
-  "subAccounts": "0x1dC3c8f65529E32626bbbb901cb743d373a7193e"
+  "auction": "0x51741cbDcd28e770729f1c98d02Ab41E565A5960",
+  "cash": "0x8467d28492bB13cC964C49Fcc2fCA8A8B478836E",
+  "rateModel": "0x0b3639A094854796E3b236DB08646ffd21C0B1B2",
+  "securityModule": "0xfe051Cc322F5124e53cA89611dD0c9a32F350a1C",
+  "srm": "0xE3436F0F982fbbAf88f28DACE9b36a85c97aECdE",
+  "srmViewer": "0xfd1dCc9d0F9012F8cE8638D6EAA6710972075dab",
+  "stableFeed": "0xF3520BB46fef439342b0F1A37E9C0673a252B5eA",
+  "subAccounts": "0x543A14451ED4875F130ED0A11904d9de51c7edbc"
 }
