--- a/scripts/input/31337/config.json
+++ b/scripts/input/31337/config.json
@@ -1,6 +1,7 @@
 {
   "auction": "0x51741cbDcd28e770729f1c98d02Ab41E565A5960",
   "cash": "0x8467d28492bB13cC964C49Fcc2fCA8A8B478836E",
+  "dataSubmitter": "0xC2C7976E33FE6680B09FA97c607A300B619dFcB9",
   "rateModel": "0x0b3639A094854796E3b236DB08646ffd21C0B1B2",
   "securityModule": "0xfe051Cc322F5124e53cA89611dD0c9a32F350a1C",
   "srm": "0xE3436F0F982fbbAf88f28DACE9b36a85c97aECdE",
