--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,15 +37,15 @@ jobs:
 
       - name: Run Coverage
         run: forge coverage --report lcov
-      
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          # re generate when github go public
-          token: 3e3c7dca-9ac1-4b0b-82d2-5191a10064b7
-          directory: .
-          env_vars: OS,PYTHON
-          fail_ci_if_error: true
-          files: ./lcov.info
-          name: lyra-v2
-          verbose: true
+#
+#      - name: Upload coverage to Codecov
+#        uses: codecov/codecov-action@v3
+#        with:
+#          # re generate when github go public
+#          token: 3e3c7dca-9ac1-4b0b-82d2-5191a10064b7
+#          directory: .
+#          env_vars: OS,PYTHON
+#          fail_ci_if_error: true
+#          files: ./lcov.info
+#          name: lyra-v2
+#          verbose: true
