--- a/.gitmodules
+++ b/.gitmodules
@@ -1,17 +1,15 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
-	branch = v4.8.3
 [submodule "lib/lyra-utils"]
 	path = lib/lyra-utils
-	url = https://github.com/lyra-finance/lyra-utils
+	url = https://github.com/derivexyz/derive-utils
 [submodule "lib/v2-core"]
 	path = lib/v2-core
-	url = git@github.com:lyra-finance/v2-core.git
+	url = https://github.com/derivexyz/v2-core
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
-	ignore = untracked
 [submodule "lib/openzeppelin-contracts-upgradeable"]
 	path = lib/openzeppelin-contracts-upgradeable
-	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable.git
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
